refs #61071 @0.5h: Fixed Bug, where PredefinedConfigs got the wrong ProofConfig. Minor change in InitializeDatabaseLocal